syntax = "proto3";

// TODO: Rename io.harness.pms.contracts.sdk.registration and move this out of this directory
package io.harness.pms.contracts.plan;

option java_multiple_files = true;

import "io/harness/pms/contracts/steps/step_type.proto";

// TODO : Rename this PmsSdkRegistrationService
service PmsService {
  rpc initializeSdk(InitializeSdkRequest) returns (InitializeSdkResponse);
}

message InitializeSdkRequest {
  string name = 1;
  map<string, Types> supportedTypes = 2;
  repeated io.harness.pms.contracts.steps.SdkStep supportedSteps = 13;
  SdkModuleInfo sdkModuleInfo = 5;
  ConsumerConfig interruptConsumerConfig = 6;
  ConsumerConfig orchestrationEventConsumerConfig = 7;
  ConsumerConfig facilitatorEventConsumerConfig = 8;
  ConsumerConfig nodeStartEventConsumerConfig = 9;
  ConsumerConfig progressEventConsumerConfig = 10;
  ConsumerConfig nodeAdviseEventConsumerConfig = 11;
  ConsumerConfig nodeResumeEventConsumerConfig = 12;
}

message InitializeSdkResponse {}

message Types {
  repeated string types = 1;
}

message SdkModuleInfo {
  string displayName = 1;
}
message ConsumerConfig {
  oneof config {
    Redis redis = 1;
  }
}

message Redis {
  string topicName = 1;
  // We should add more redis config details here but for now assuming the redis config is same for all omitting this
}